[package]
name = "order_book"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
order-book-io = { path = "io", version = "0.1.0", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2" }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2" }
codec = { package = "parity-scale-codec", version = "3.6", default-features = false }
scale-info = { version = "2.9", default-features = false, features = [
    "derive",
] }
sha2 = { version = "0.10.8", default-features = false }
fixed = "1.27"

[build-dependencies]
order-book-io = { path = "io", version = "0.1.0", default-features = false }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.2", features = [
    "metawasm",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"