[package]
name = "price-oracle-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.1.1" }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.1.1" }
codec = { package = "parity-scale-codec", version = "3.6", default-features = false }
scale-info = { version = "2.9", default-features = false, features = [
    "derive",
] }